--- a/playbooks/inventory.yaml
+++ b/playbooks/inventory.yaml
@@ -7,7 +7,15 @@ ungrouped:
 
 github_runners:
   hosts:
-    locomotive2:
-      ansible_host: 192.168.2.50
-      ansible_user: gooroo
+    locomotive:
+      ansible_connection: winrm
+      ansible_winrm_port: 5985
+      ansible_python_interpreter: 'python.exe'
+      ansible_host: "{{ lookup('community.general.onepassword', 'Locomotive', vault='Local', field='url') }}"
+      ansible_user: "{{ lookup('community.general.onepassword', 'Locomotive', vault='Local', field='username') }}"
+      ansible_password: "{{ lookup('community.general.onepassword', 'Locomotive', vault='Local', field='password') }}"
+
+    macmini_m1:
+      ansible_host: "{{ lookup('community.general.onepassword', 'Mac mini M1', vault='Local', field='url') }}"
+      ansible_user: "{{ lookup('community.general.onepassword', 'Mac mini M1', vault='Local', field='username') }}"
       ansible_python_interpreter: '/usr/bin/env python3'
