--- a/playbooks/roles/github_actions_runner/tasks/Darwin.yml
+++ b/playbooks/roles/github_actions_runner/tasks/Darwin.yml
@@ -42,7 +42,7 @@
     headers:
       Accept: application/vnd.github+json
       Authorization: Bearer {{ lookup('community.general.onepassword', gh_api_token.item, **gh_api_token.args) }}
-      X-GitHub-Api-Version: 2022-11-28
+      X-GitHub-Api-Version: "2022-11-28"
     status_code: [201]
   register: registration_token
 
