--- a/playbooks/roles/github_actions_runner/tasks/Windows.yml
+++ b/playbooks/roles/github_actions_runner/tasks/Windows.yml
@@ -44,7 +44,7 @@
     headers:
       Accept: application/vnd.github+json
       Authorization: Bearer {{ lookup('community.general.onepassword', gh_api_token.item, **gh_api_token.args) }}
-      X-GitHub-Api-Version: '2022-11-28'
+      X-GitHub-Api-Version: "2022-11-28"
     status_code: [201]
     return_content: true
   register: registration_token
