--- a/playbooks/inventory.yaml
+++ b/playbooks/inventory.yaml
@@ -18,4 +18,5 @@ github_runners:
     macmini_m1:
       ansible_host: "{{ lookup('community.general.onepassword', 'Mac mini M1', vault='Local', field='url') }}"
       ansible_user: "{{ lookup('community.general.onepassword', 'Mac mini M1', vault='Local', field='username') }}"
+      ansible_become_password: "{{ lookup('community.general.onepassword', 'Mac mini M1', vault='Local', field='password') }}"
       ansible_python_interpreter: '/usr/bin/env python3'
